--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <style>
+      html {
+        scrollbar-width: normal;
+        scrollbar-color: #777 rgb(46, 45, 45);
+        scroll-behavior: smooth;
+        
+      }
+
+      html::-webkit-scrollbar {
+        width : 1vw;
+      }
+
+      html::-webkit-scrollbar-thumb {
+        background-color: #7775;
+      }
+
+      html::-webkit-scrollbar-thumb:hover{
+        background-color: #777;
+      }
+
+      html::-webkit-scrollbar-track{
+        background-color: #5555;
+      }
+
+      html::-webkit-scrollbar-track:hover{
+        background-color: #555;
+      }
+      
+    </style>
   </head>
   <body>
     <div id="root"></div>
