modal error fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
     <style>
-      /* html {
+      html {
         scrollbar-width: normal;
         scrollbar-color: #777 rgb(46, 45, 45);
         scroll-behavior: smooth;
@@ -31,7 +31,7 @@
 
       html::-webkit-scrollbar-track:hover{
         background-color: #555;
-      } */
+      }
       
     </style>
   </head>
